--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ db.default.url=${DATABASE_URL}
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
-# applyEvolutions.default=true
+ applyEvolutions.default=true
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
