connected to heroku postgres db

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,8 +33,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+
 db.default.driver=org.postgresql.Driver
-db.default.url=${DATABASE_URL}
+db.default.url="jdbc:postgresql://ec2-54-235-99-22.compute-1.amazonaws.com:5432/ddp040a96fnej8?user=bwkejaszxgyico&password=QoLb_73wfCAD6eLbWxM7IpSazR&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
+#db.default.url=${DATABASE_URL}
 
 # db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
