--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,14 +34,14 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 
-db.default.driver=org.postgresql.Driver
-db.default.url="jdbc:postgresql://ec2-54-235-99-22.compute-1.amazonaws.com:5432/ddp040a96fnej8?user=bwkejaszxgyico&password=QoLb_73wfCAD6eLbWxM7IpSazR&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
+#db.default.driver=org.postgresql.Driver
+#db.default.url="jdbc:postgresql://ec2-54-235-99-22.compute-1.amazonaws.com:5432/ddp040a96fnej8?user=bwkejaszxgyico&password=QoLb_73wfCAD6eLbWxM7IpSazR&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory"
 #db.default.url=${DATABASE_URL}
 
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+ db.default.driver=org.h2.Driver
+ db.default.url="jdbc:h2:mem:play"
+ db.default.user=sa
+ db.default.password=""
  applyEvolutions.default=true
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
